Changes in paths - Fixes heroku

--- a/Public/index.ejs
+++ b/Public/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../public/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Optic Store</title>
 </head>
 
@@ -87,6 +87,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../../index.js"></script>
+<script src="./index.js"></script>
 
 </html>
