--- a/Public/index.ejs
+++ b/Public/index.ejs
@@ -5,87 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Optic Store</title>
 </head>
 
 <body>
     <nav>
+        <div class="">
+            <h2 class="">
+                Bienvenido, <%= user.email %>
+                    <form id="logout-form" action="/auth/logout" method="POST">
+                        <button type="submit">
+                            Logout
+                        </button>
+                    </form>
 
-    </nav>
-    <div class="">
-        <h2 class="">
-            Bienvenido, <%= user.email %>
-                <form id="logout-form" action="/auth/logout" method="POST">
-                    <button type="submit">
-                        Logout
-                    </button>
-                </form>
-
-        </h2>
-    </div>
-    <div style="display: flex; flex-direction: column; align-items: center;">
-        <div>
-            <h3 style="text-align: center; margin-top: 16px;"> Agrega un producto! </h3>
+            </h2>
         </div>
-        <form id="products-form" action="/products" method="POST">
-            <div style="margin-bottom: 16px;">
-                <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;">
-                    <label for="nombre"> Nombre: </label>
-                    <br>
-                    <input type="text" name="title" id="name-input" style="margin-bottom: 16px;" class="input-file"
-                        required>
+    </nav>
+
+    <article>
+        <div class="products-div" id="productsCards-div">
+            <% products.forEach(function(item) { %>
+                <div class="card" style="width: 18rem;">
+                    <img src="<%= item.thumbnail %>" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= item.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= item.description %>
+                        </p>
+                        <p class="card-text">$<%= item.price %>
+                        </p>
+                    </div>
+                    <button class="btn btn-primary">Add to cart
+                    </button>
                 </div>
-                <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;">
-                    <label for="precio"> Precio: </label>
-                    <br>
-                    <input type="number" name="price" id="price-input" style="margin-bottom: 16px;" step=".01"
-                        class="input-file" required>
-                </div>
-                <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;">
-                    <label for="description"> Descripción: </label>
-                    <br>
-                    <input type="text" name="description" id="description-input" style="margin-bottom: 16px;" step=".01"
-                        class="input-file" required>
-                </div>
-                <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;">
-                    <label for="stock"> Stock: </label>
-                    <br>
-                    <input type="number" name="stock" id="stock-input" style="margin-bottom: 16px;" step=".01"
-                        class="input-file" required>
-                </div>
-                <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;">
-                    <label for="imagen"> URL Imagen: </label>
-                    <br>
-                    <input type="text" name="thumbnail" id="image-input" style="margin-bottom: 16px;" required
-                        class="input-file">
-                </div>
-                <div style="display: flex; justify-content: center; align-items: center;"><input type="submit"
-                        id="submit-btn" value="Crear producto" class="submit-button"></div>
-            </div>
-        </form>
-    </div>
-    <div id="products-table"></div>
-    <br>
-    <br>
-    <div id="chat-div">
-        <form id="email-form" action="">
-            <label for="email">Ingresa tu correo electrónico para ingresar al chat: </label>
-            <input id="email-input" type="email" name="email" required>
-            <button id="chat-btn" type="submit">Chatear</button>
-        </form>
-        <br>
-        <br>
-        <div id="messages-div"> </div>
-        <form id="chat-form" action="">
-            <textarea name="message" id="message-text" cols="40" rows="10"></textarea>
-        </form>
-    </div>
+                <% }); %>
+        </div>
+    </article>
+
     <footer>
 
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="./index.js"></script>
 
