--- a/Public/styles/styles.css
+++ b/Public/styles/styles.css
@@ -13,21 +13,25 @@
 .signinForm {
     display: flex;
     flex-direction: column;
-    background-color: #F3F1F5;
-    justify-content: center;
-    width: 450px;
     align-items: center;
-    height: 250px;
-    padding: 5%;
-    margin: 5%;
 }
 
-/* .authDiv {
+.loginDiv {
     display: flex;
     justify-content: center;
-    flex-direction: row;
-} */
+    flex-direction: column;
+    align-items: center;
+    padding: 10%;
+}
 
 .nameInput {
     border: 1px solid #7F7C82;
+}
+
+.products-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    padding: 10%;
 }
