--- a/Public/index.ejs
+++ b/Public/index.ejs
@@ -13,21 +13,30 @@
 
 <body>
     <nav>
-        <div class="">
+        <div class="nav-bar">
             <h2 class="">
                 Bienvenido, <%= user.email %>
                     <form id="logout-form" action="/auth/logout" method="POST">
-                        <button type="submit">
+                        <button class="btn btn-secundary" type="submit">
                             Logout
                         </button>
                     </form>
 
             </h2>
+            <a href="/cart">
+            <button class="btn btn-primary" >
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                </svg>
+            </button>
+        </a>
         </div>
     </nav>
 
     <article>
-        <div class="products-div" id="productsCards-div">
+        <div data-cartId="<%= user.cart %>" class="products-div" id="productsCards-div">
             <% products.forEach(function(item) { %>
                 <div class="card" style="width: 18rem;">
                     <img src="<%= item.thumbnail %>" class="card-img-top" alt="...">
@@ -41,7 +50,8 @@
                         <p class="card-text">$<%= item.price %>
                         </p>
                     </div>
-                    <button class="btn btn-primary">Add to cart
+                    <button data-productId="<%= item._id %>" name="addToCart"
+                        class="btn btn-primary">Add to cart
                     </button>
                 </div>
                 <% }); %>
@@ -59,7 +69,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="./index.js"></script>
+<script src="./fetch.js"></script>
 
 </html>
