--- a/Public/index.ejs
+++ b/Public/index.ejs
@@ -51,7 +51,7 @@
                         </p>
                     </div>
                     <button data-productId="<%= item._id %>" name="addToCart"
-                        class="btn btn-primary">Add to cart
+                        class="btn btn-primary btn-add-to-cart">Add to cart
                     </button>
                 </div>
                 <% }); %>
@@ -70,5 +70,4 @@
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
 <script src="./fetch.js"></script>
-
 </html>
