--- a/Public/cartView.ejs
+++ b/Public/cartView.ejs
@@ -36,8 +36,8 @@
 
     <article>
 
-        <div id="cart-div">
-            <% if (cart && cart.length> 1) { %>
+        <div id="cart-div" data-cartId="<%= user.cart %>">
+            <% if (cart && cart.length>= 1) { %>
                 <% cart.forEach(function(item) { %>
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
@@ -56,15 +56,16 @@
                                     <p class="card-text"><small class="text-muted">
                                             <%= item.cant %>
                                         </small></p>
+                                    <p>Total: <%= item.cant * item.price %>
+                                    </p>
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-outline-secondary">Delete product</button>
+                        <button data-deleteProduct="<%= item._id %>" class="deleteProduct-btn btn btn-outline-secondary">Delete product</button>
                     </div>
                     <% }); %>
-                        <a href="/checkout">
-                            <button class="btn btn-outline-success">Checkout</button>
-                        </a>
+                        <button data-productsInCart="<%= cart %>" class="btn btn-outline-success"
+                            id="checkout-btn">Checkout</button>
                         <% } %>
         </div>
     </article>
@@ -80,6 +81,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
-<script src="./fetch.js"></script>
+<script src="./cartView.js"></script>
 
 </html>
