--- a/Public/views/pages/admin/admin.ejs
+++ b/Public/views/pages/admin/admin.ejs
@@ -87,6 +87,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="./index.js"></script>
+<script src="./admin.js"></script>
 
 </html>
